# cryptodatapy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/cryptodatapy/: __init__.py
src/cryptodatapy/conf/: fields.csv  fields_dict.csv  tickers.csv
src/cryptodatapy/core/: data_client.py  data_request.py
src/cryptodatapy/data_cleaning/: Filter.ipynb  clean.py  filter.py  impute.py  od.py
src/cryptodatapy/data_requests/: __init__.py  datarequest.py  getdata.py
src/cryptodatapy/data_vendors/: CoinMetrics.ipynb  CryptoCompare.ipynb  __init__.py  ccxt_api.py  cm.py  coinmetrics_api.py  cryptocompare.py  cryptocompare_api.py  datavendor.py  dbnomics_api.py  glassnode_api.py  investpy_api.py  pandasdr_api.py  tiingo_api.py
src/cryptodatapy/datasets/: br_econ_calendar.csv  ca_econ_calendar.csv  cn_econ_calendar.csv  de_econ_calendar.csv  ez_econ_calendar.csv  fr_econ_calendar.csv  gb_econ_calendar.csv  get_econ_calendars.py  id_econ_calendar.csv  in_econ_calendar.csv  it_econ_calendar.csv  jp_econ_calendar.csv  kr_econ_calendar.csv  mx_econ_calendar.csv  ru_econ_calendar.csv  tr_econ_calendar.csv
src/cryptodatapy/extract/: DataRequest.ipynb  GetData.ipynb  __init__.py  datarequest.py  getdata.py
src/cryptodatapy/metadata/: tickers.csv
src/cryptodatapy/transform/: __init__.py  blah.py  clean.py  convertparams.py  filter.py  impute.py  od.py  wrangle.py
src/cryptodatapy/util/: ConvertParams.ipynb  DataCatalog.ipynb  DataCredentials.ipynb  (+6 more)
tests/: datasets.py  test_aqr.py  test_ccxt.py  test_clean.py  test_coinmetrics.py  test_convertparams.py  test_cryptocompare.py  test_cryptodatapy.py  test_datacatalog.py  test_datarequest.py  test_dbnomics.py  test_filter.py  test_getdata.py  test_glassnode.py  test_impute.py  test_investpy.py  test_od.py  test_pandasdr.py  test_tiingo.py
tests/data/: cc_exchanges_req.json  cc_indexes_data_req.json  cc_indexes_df.csv  cc_indexes_req.json  cc_indexes_url_params.json  cc_news_req.json  cc_ohlcv_data_req.json  cc_ohlcv_df.csv  cc_ohlcv_url_params.json  cc_on-chain_data_req.json  cc_on-chain_df.csv  cc_on-chain_url_params.json  cc_raw_indexes_data.csv  cc_raw_oc_df.csv  cc_raw_ohlcv_df.csv  cc_social_data_req.json  cc_social_df.csv  cc_social_url_params.json  cc_top_mkt_cap_req.json  ccxt_ohlcv_df.csv  cm_ohlcv_df.csv  cm_raw_oc_df.csv  cm_raw_ohlcv_df.csv  db_series_df.csv  fred_df.csv  gn_assets_req.json  gn_data_req.json  gn_fields_req.json  tg_crypto_data_req.json  tg_crypto_req.json  tg_eqty_req.json  tg_fx_data_req.json  tg_iex_req.json  yahoo_df.csv
(+42 files in other folders)
