[tool.poetry]
name = "cryptodatapy"
version = "0.1.0"
description = "Cryptoasset data library"
authors = ["Nick Latinovic"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
keyring = ">=23.6.0"
pandas = ">=1.4.3"
requests = ">=2.28.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
jupyter = ">=1.0.0"
myst-nb = {version = ">=0.16.0", python = "^3.9"}
sphinx-autoapi = ">=1.8.4"
sphinx-rtd-theme = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
