[tool.poetry]
name = "cryptodatapy"
version = "0.1.1"
description = "Cryptoasset data library"
authors = ["Systamental"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
matplotlib = ">=3.5.2"
requests = {version = ">=2.28.0", python = "^3.7"}
coinmetrics-api-client = {version = ">=2022.6.17", python = "^3.7"}
investpy = ">=1.0.8"
DBnomics = ">=1.2.3"
ccxt = ">=1.91.52"
webdriver-manager = ">=3.8.3"
statsmodels = ">=0.13.2"
prophet = {version = "^1.1", python = "^3.7"}
selenium = "^4.4.3"
numpy = "^1.23.2"
pandas = "^1.4.4"
pandas-datareader = "^0.10.0"
responses = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
jupyter = ">=1.0.0"
black = "^22.8.0"
isort = "^5.10.1"
myst-nb = {version = "^0.16.0", python = ">3.8, <4.0"}
sphinx-autoapi = "^1.9.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
